<?xml version="1.0"?>
<package format="3">
  <name>rov_peripherals</name>
  <version>0.2.0</version>
  <description>Peripheral command services for lights, laser, gripper, and camera tilt.</description>
  <maintainer email="andrea@example.com">Andrea</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>rov_msgs</depend>
  <depend>std_srvs</depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <test_depend>python3-pytest</test_depend>
</package>
